Emphasize The Fountain

--- a/Week2.html
+++ b/Week2.html
@@ -23,7 +23,7 @@
           Christ!<br />
           I go to the greatest church on earth call
           <em>The Fountain Church International!</em>My family and I have been
-          attending The Fountain for 15 years now.
+          attending <em>The Fountain</em> for 15 years now.
         </p>
         <h3>Goals</h3>
         <ul>
